[package]
name = "webhook-forwarder"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio", "client-legacy", "http1"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "net", "macros"] }
form_urlencoded = "1"
